# parallel-rustc

./: Cargo.toml  LICENSE  README.md
.github/workflows/: benchmark-v5.yml  benchmark.yml  equivalence.yml
research/: topics.md
spec/: 0.0.0.md  0.1.0.md  0.2.0.md  0.3.0.md  0.4.0.md  0.5.0-postmortem.md  0.5.0.md
src/: bench.rs  builder.rs  builder_v4.rs  builder_v5.rs  classifier.rs  graph.rs  lib.rs  main.rs  metadata.rs  plan.rs  recorder.rs  unit_graph.rs
src/coordinator/: main.rs
src/wrapper/: main.rs
tests/: integration.rs  integration_features.rs  integration_testbed.rs  integration_unit_graph.rs
