[package]
name = "parallel-rustc"
version = "0.5.1"
edition = "2021"
description = "Wavefront parallel compilation planner for Cargo workspaces"
license = "MIT OR Apache-2.0"

[lib]
name = "parallel_rustc"
path = "src/lib.rs"

[[bin]]
name = "parallel-rustc"
path = "src/main.rs"

[[bin]]
name = "parallel-rustc-wrapper"
path = "src/wrapper/main.rs"

[[bin]]
name = "parallel-rustc-coordinator"
path = "src/coordinator/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
petgraph = "0.6"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.27.0"
